--- a/app/composer.json
+++ b/app/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "tymon/jwt-auth": " ^1.0.0-rc.2"
+        "tymon/jwt-auth": " ^1.0.0-rc.2",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
